--- a/src/app/layouts/sidebar/sidebar.component.html
+++ b/src/app/layouts/sidebar/sidebar.component.html
@@ -46,7 +46,7 @@
           height="42"
           class="rounded-circle shadow-sm"
         />
-        <span class="leftbar-user-name mt-2">Dominic Keller</span>
+        <span class="leftbar-user-name mt-2">Dharmindar</span>
       </a>
     </div>
 
@@ -85,7 +85,7 @@
       }
 
       <!-- Help Box -->
-      <div class="help-box text-white text-center">
+      <!--<div class="help-box text-white text-center">
         <a href="javascript: void(0);" class="float-end close-btn text-white">
           <i class="mdi mdi-close"></i>
         </a>
@@ -99,7 +99,7 @@
         <a href="javascript: void(0);" class="btn btn-secondary btn-sm"
           >Upgrade</a
         >
-      </div>
+      </div>-->
       <!-- end Help Box -->
     </ul>
     <!--- End Sidemenu -->
