--- a/src/app/components/earnings-calendar/earnings-calendar.component.html
+++ b/src/app/components/earnings-calendar/earnings-calendar.component.html
@@ -4,7 +4,7 @@
         <div class="card">
           <div class="card-header">
             <h4 class="card-title">Earnings Calendar</h4>
-            <p class="card-subtitle mb-0">Latest earnings report details</p>
+            <p class="card-subtitle mb-0">Latest earnings estimates details</p>
           </div>
           <div class="card-body">
             <!-- Loading Spinner -->
@@ -25,7 +25,7 @@
                 tableClass="dt-responsive nowrap w-100"
                 [columns]="columns"
                 [data]="earningsData"
-                [itemsPerPage]="5"
+                [itemsPerPage]="10"
               ></app-table>
             </div>
           </div>
