updated as on login and registration

--- a/src/app/layouts/topbar/topbar.component.html
+++ b/src/app/layouts/topbar/topbar.component.html
@@ -7,20 +7,20 @@
         <!-- Logo light -->
         <a routerLink="/" class="logo-light">
           <span class="logo-lg">
-            <img src="assets/images/logo.png" alt="logo" />
+            <img src="assets/images/brands/TheInsiderTradeFinal.png" alt="logo" />
           </span>
           <span class="logo-sm">
-            <img src="assets/images/logo-sm.png" alt="small logo" />
+            <img src="assets/images/brands/TheInsiderTradeFinal.png" alt="small logo" />
           </span>
         </a>
 
         <!-- Logo Dark -->
         <a routerLink="/" class="logo-dark">
           <span class="logo-lg">
-            <img src="assets/images/logo-dark.png" alt="dark logo" />
+            <img src="assets/images/brands/TheInsiderTradeFinal.png" alt="dark logo" />
           </span>
           <span class="logo-sm">
-            <img src="assets/images/logo-dark-sm.png" alt="small logo" />
+            <img src="assets/images/brands/TheInsiderTradeFinal.png" alt="small logo" />
           </span>
         </a>
       </div>
@@ -517,7 +517,8 @@
             />
           </span>
           <span class="d-lg-flex flex-column gap-1 d-none">
-            <h5 class="my-0">Dominic Keller</h5>
+            <!--<h5 class="my-0">Dominic Keller</h5>-->
+            <h5 class="my-0">{{first_name}}</h5>
             <h6 class="my-0 fw-normal">Founder</h6>
           </span>
         </a>
