--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,4 @@
+@use 'stream-chat-angular/src/assets/styles/scss/index.scss';
 /* You can add global styles to this file, and also import other style files */
 @import 'nouislider/dist/nouislider.css';
 
@@ -20,4 +21,33 @@
 
 .emoji-mart-preview {
   display: none;
+}
+
+
+
+
+// html {
+//   height: 100%;
+// }
+
+// body {
+//   margin: 0;
+//   height: 100%;
+// }
+
+#root {
+  display: flex;
+  height: 100%;
+
+  stream-channel-list {
+    width: 30%;
+  }
+
+  stream-channel {
+    width: 70%;
+  }
+
+  stream-thread {
+    width: 45%;
+  }
 }
