--- a/src/app/account/news-slider/news-slider.component.html
+++ b/src/app/account/news-slider/news-slider.component.html
@@ -50,7 +50,7 @@
   
     <!-- Controls -->
    
-    <button 
+    <button style="width:20px;"
       class="carousel-control-prev" 
       href="#newsSlider" 
       type="button" 
@@ -58,7 +58,7 @@
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
       <span class="visually-hidden">Previous</span>
     </button>
-    <button 
+    <button style="width:20px;"
       class="carousel-control-next" 
       href="#newsSlider" 
       type="button" 
@@ -66,8 +66,5 @@
       <span class="carousel-control-next-icon" aria-hidden="true"></span>
       <span class="visually-hidden">Next</span>
     </button>   
-    
-   
-  
 </div>
   
